<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_marginTop="3dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/cachua"
                android:id="@+id/imgAnh"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:paddingLeft="10dp">

                <TextView
                    android:text="@string/tensanpham"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTenSanPham"
                    android:paddingTop="3dp"
                    android:textSize="@dimen/tensanpham"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/xuatxu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:textSize="@dimen/giaban"/>

                        <TextView
                            android:text="Nhật bản"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtXuatXu"
                            android:textSize="@dimen/giaban"
                            android:layout_weight="1" />


                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:text="@string/trongluong"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:textSize="@dimen/giaban"/>
                        <TextView
                            android:text="10000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtKhoiLuong"
                            android:layout_weight="1"
                            android:textSize="@dimen/giaban"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="115dp"
                            android:layout_weight="1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Date"
                            android:layout_weight="1"
                            android:id="@+id/txtDateTime"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>